# wt-resource-tool

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
playground/: example_get_data.ipynb  example_memory_tool.ipynb  example_player_title_tool.ipynb  example_vehicle.ipynb
references/: cn_ztz_99a.json  z_10me_cost.json
scripts/: generate_player_medal.py  generate_player_title.py  generate_vehicle_data.py  get_vehicle_unit_class.py
src/wt_resource_tool/: __init__.py  _client.py  _schema.py
src/wt_resource_tool/parser/: player_medal_parser.py  player_title_parser.py  vehicle_data_parser.py
src/wt_resource_tool/schema/: _vehicle.py  _wt_schema.py
static/2_44_0_42/: player_title.json
static/latest/: player_medal.json  player_title.json  vehicle.json
tests/: conftest.py
tests/parser/: test_client.py  test_medal_parser.py  test_title_parser.py  test_tools.py  test_vehicle_parser.py
