[project]
name = "wt-resource-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "axiangcoding",email = "axiangcoding@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "wt_resource_tool", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
